
	* nsd/log.c:
	* nsd/nsconf.h:
	* nsd/nsconf.c:  Removed complicated and dubious log
	buffering option.  The new ns_logctl feature can be used
	to batch noisy requests.

	* nsd/tclinit.c:
	* nsd/tclcmds.c:
	* nsd/init.tcl:  Added new ns_init command to replace the
	nsv-based namespace copy/update mechanism.  The init.tcl
	is now called only at startup.


2002-07-14  Jim Davidson <jgdavidson@aol.com>

	* nsd/log.c:
	* nsd/tclcmds.c:  Added the ns_logctl command with options
	to hold, release, flush, etc. the log messages in a thread.

	* nsd/adpcmds.c:
	* nsd/urlopen.c:  Switched to more object-correct
	Tcl_ObjSetVar2.

2002-07-08  Jim Davidson <jgdavidson@aol.com>

	* nsd/tclthread.c:  Cleaned up the object-based commands
	by collecting common argument and new object allocation
	code into single GetArgs function.

2002-07-07  Jim Davidson <jgdavidson@aol.com>

	* nsd/tclvar.c:  Removed string commands because it was
	messy maintaining both.

	* nsd/info.c:
	* nsd/queue.c:
	* nsd/tclcmds.c:
	* nsd/tclset.c:  Added object commands.

	* nsd/tclobj.c:
	* nsd/tclmisc.c:  Updated Ns_Time type code to handle simple
	single-integer times without microsecond resolution.

	* include/ns.h:
	* include/Makefile.global:
	* Makefile:  Updated for AOLserver beta4 release to coincide
	with Tcl beta1 release.

	Otherwise, minor edits to new object commands in several
	places.
	
2002-07-05  Jim Davidson <jgdavidson@aol.com>

	* nsd/nsd.h:
	* nsd/adpcmds.c:
	* nsd/adpeval.c:
	* nsd/adprequest.c:
	* nsd/tclcmds.c:  Updated remaining ADP commands to be
	object-based.  Because the NsInterp->adp struct now uses
	Tcl_Obj's for call frame args, the string commands were
	just dumped.

2002-06-25  Scott S. Goodwin <scott@scottg.net>

	* nsd/tclvar.c:
	* nsd/tclcmds.c: Reimplemented nsv commands as object commands.

2002-06-19  Jim Davidson <jgdavidson@aol.com>

	* include/ns.h:
	* nsd/tclinit.c:  Added new Ns_TclCreateInterp() which
	creates and initializes interps for server and non-server